# mockito-python

./: .bumpversion.cfg  .codespellrc  .flake8  .gitignore  .hgignore  .hgrc  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES.txt  Edit  LICENSE  MANIFEST.in  README  README.rst  all_tests.py  bump.bat  hg-clean  mockito.py  mockito_classmethods_test.py  mockito_matchers_test.py  mockito_modulefunctions_test.py  mockito_modulemethods_test.py  mockito_staticmethods_test.py  mockito_stubbing_test.py  mockito_test.py  mockito_verification_test.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  static_mocker.py  test.bat  test.sh
docs/: Makefile  any-and-ellipses.rst  changes.rst  conf.py  index.rst  make.bat  mock-shorthands.rst  nutshell.rst  recipes.rst  the-functions.rst  the-matchers.rst  walk-through.rst
mockito/: __init__.py  inorder.py  invocation.py  matchers.py  mock.py  mock_registry.py  mocking.py  mockito.py  observer.py  patching.py  sameish.py  signature.py  spying.py  static_mocker.py  utils.py  verification.py
mockito_test/: __init__.py  aliases_test.py  all_tests.py  classmethods_test.py  demo_test.py  ellipsis_test.py  empty_mocks_test.py  importer.py  instancemethods_test.py  matchers_test.py  mockingexacttypes_test.py  mockito_classmethods_test.py  mockito_demo_test.py  mockito_importer.py  mockito_instancemethods_test.py  mockito_mockingexacttypes_test.py  mockito_modulefunctions_test.py  mockito_staticmethods_test.py  mockito_stubbing_test.py  mockito_verification_errors_test.py  mockito_verification_test.py  modulefunctions_test.py  signatures_test.py  smart_test_runner.py  speccing_test.py  spying_test.py  staticmethods_test.py  stubbing_test.py  test_base.py  verification_errors_test.py  verification_test.py  verifications_test.py  when_interface_test.py
mockito_util/: test.py  write_readme.py
scripts/: run-pytest-matrix.py
src/: all_tests.py  invocation.py  matchers.py  method_printer.py  method_printer_test.py  mock.py  mockito.py  mockito_classmethods_test.py  mockito_demo_test.py  test_base.py  (+8 more)
(+68 files in other folders)
