[project]
name = "mockito"
version = "1.5.3-dev"
description = "Spying framework"
authors = [
    { name = "herr kaste", email = "herr.kaste@gmail.com" }
]
dependencies = []
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=4.6.11",
    "numpy>=2.1.3",
    "bump2version>=0.5.11",
    "Sphinx>=5.3.0",
    "sphinx-autobuild>=2021.3.14",
]

[tool.hatch.metadata]
allow-direct-references = true
