[project]
name = "mockito"
version = "2.0.0-dev"
description = "Spying framework"
authors = [
    { name = "herr kaste", email = "herr.kaste@gmail.com" }
]
dependencies = []
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "codespell>=2.2.5",
    "flake8>=5.0.4",
    "ipython>=7.34.0",
    "mypy>=1.4.1",
    "numpy>=1.21.6",
    "pytest>=7.4.4",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
]
